--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -40,7 +41,73 @@
             </div>
         </div>
     </header>
-    <main></main>
-    <footer></footer>
-</body>
+    <main>
+        <div class="slide">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>WELCOME TO OUR MARKET</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor 
+                            non, ornare sagittis dolor. Nulla vestibulu lacus ...
+                        </p>
+                        <div class="slide-buttons">
+                            <button>VIEW MORE</button>
+                            <button>VIDEO TOUR</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="description">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="grey-block"></div>
+                        <h1></h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-7">
+                        <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non
+                            , ornare sagittis dolor. Nulla vestibulu lacus sed molestie gravida. Crferm entum  quismagna congue
+                            , vel sodales arcu vestibulum. Nunc lobortis dui magna, quis lacusullamcorper at.
+                        </p>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="green-block"></div>
+                        <h1>
+                            DEDICATION TO THE CUSTOMERS
+                        </h1>
+                        <p>
+                            nteger vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper risus. 
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-7">
+                        <p>Phasellus sollicitudin ante eros ornare, sit amet luctus lorem semper. Suspendisse posuere, quamdictum
+                             consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi. Cras ornare bibendum ante, ut bibendum 
+                             odio convallis eget. vel sodales arcu vestibulum.
+
+                        </p>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="green-block"></div>
+                        <h1></h1>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-7"></div>
+                    <div class="col-md-5">
+                        <div class="green-block"></div>
+                        <h1></h1>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer></footer> -->
+</body> 
 </html>
