finished blocks in description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 head">
                     <div class="logo">
                         <a href="">MODEST<img src=""></a>
                     </div>
@@ -30,7 +30,7 @@
                     </nav>
                     <div class="search">
                         <form action="">
-                            <input type="search">
+                            <input type="search" placeholder="SEARCH">
                         </form>
                             <a href="">
                                 <div class="search-img"></div>
@@ -58,56 +58,62 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="description">
+        <div class="description">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="grey-block"></div>
-                        <h1></h1>
-                    </div>
+                        <h1>WE ARE MODEST</h1>
+                    </div> 
                 </div>
                 <div class="row">
-                    <div class="col-md-7">
-                        <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non
+                    <div class="col-md-7 left-block">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non
                             , ornare sagittis dolor. Nulla vestibulu lacus sed molestie gravida. Crferm entum  quismagna congue
                             , vel sodales arcu vestibulum. Nunc lobortis dui magna, quis lacusullamcorper at.
                         </p>
-                    </div>
-                    <div class="col-md-5">
-                        <div class="green-block"></div>
-                        <h1>
-                            DEDICATION TO THE CUSTOMERS
-                        </h1>
-                        <p>
-                            nteger vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper risus. 
+                        <p>Phasellus sollicitudin ante eros ornare, <span>sit amet luctus lorem semper</span>. Suspendisse posuere, quamdictum
+                            consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi. Cras ornare bibendum ante, ut bibendum 
+                            odio convallis eget. vel sodales arcu vestibulum.
                         </p>
+                        <div class="links">
+                            <a href="" class="facebook"></a>
+                            <a href="" class="twitter"></a>
+                            <a href="" class="google"></a>
+                            <a href="" class="basketball"></a>
+                            <a href="" class="b-e"></a>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-7">
-                        <p>Phasellus sollicitudin ante eros ornare, sit amet luctus lorem semper. Suspendisse posuere, quamdictum
-                             consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi. Cras ornare bibendum ante, ut bibendum 
-                             odio convallis eget. vel sodales arcu vestibulum.
-
-                        </p>
-                    </div>
-                    <div class="col-md-5">
-                        <div class="green-block"></div>
-                        <h1></h1>
-                        <p></p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-7"></div>
-                    <div class="col-md-5">
-                        <div class="green-block"></div>
-                        <h1></h1>
-                        <p></p>
+                    <div class="col-md-5 right-block">
+                        <div class="block-num">
+                            <div class="green-block">01</div>
+                            <div class="text">
+                                <h3>DEDICATION TO THE CUSTOMERS</h3>
+                                <p>Integer vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper risus. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="block-num">
+                            <div class="green-block">02</div>
+                            <div class="text">
+                                <h3>WORKING CLOSELY WITH OUR CLIENTS</h3>
+                                <p>Sed blandit nisi urna, sed pellentesque enim consectetur vitae. Suspendisse ut vehicula nibh.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="block-num">
+                            <div class="green-block">03</div>
+                            <div class="text">
+                                <h3>INCREASE HAPINESS</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eleifend laoreet euismod.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </main>
-    <footer></footer> -->
+    <footer></footer>
 </body> 
 </html>
