--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <div class="row">
                 <div class="col-md-12 head">
                     <div class="logo">
-                        <a href="">MODEST<img src=""></a>
+                        <a href="">
+                            <img src="images-blog/modest.png">
+                        </a>
                     </div>
                     <nav>
                         <ul class="menu">
