--- a/index.html
+++ b/index.html
@@ -5,31 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="header"
         <div class="container">
-            <div class="row">
-                <div class="col-md-12 head">
+            <div class="row header-row">
+                <div class="col-xs-12 col-md-3">
                     <div class="logo">
                         <a href="">
-                            <img src="images-blog/modest.png">
+                            <img src="images-blog/modest.png" alt="">
                         </a>
                     </div>
-                    <nav>
+                </div>
+                <div class="col-xs-12 col-md-7">
+                    <div class="navigation">
                         <ul class="menu">
-                            <li class="li"><a href="">HOME</a></li>
-                            <li class="li"><a href="">ABOUT</a></li>
-                            <li class="li"><a href="">WORK</a></li>
-                            <li class="li"><a href="">TEAM</a></li>
-                            <li class="li"><a href="">SERVICES</a></li>
-                            <li class="li"><a href="">FEAUTERS</a></li>
-                            <li class="li"><a href="">CONTACT</a></li>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">About</a></li>
+                            <li><a href="">Work</a></li>
+                            <li><a href="">Team</a></li>
+                            <li><a href="">Servises</a></li>
+                            <li><a href="">Features</a></li>
+                            <li><a href="">Contact</a></li>
                         </ul>
-                    </nav>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-2">
                     <div class="search">
                         <form action="">
                             <input type="search" placeholder="SEARCH">
@@ -37,8 +42,7 @@
                             <a href="">
                                 <div class="search-img"></div>
                             </a>
-                        
-                    </div>
+                    </div>        
                 </div>
             </div>
         </div>
