--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="grid.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header"
+    <header class="header">
         <div class="container">
             <div class="row header-row">
-                <div class="col-xs-12 col-md-3">
+                <div class="col-xs-12 col-sm-3">
                     <div class="logo">
                         <a href="">
                             <img src="images-blog/modest.png" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-7">
-                    <div class="navigation">
+                <div class="col-xs-12 col-sm-7">
+                    <nav class="navigation">
                         <ul class="menu">
                             <li><a href="">Home</a></li>
                             <li><a href="">About</a></li>
@@ -32,9 +32,9 @@
                             <li><a href="">Features</a></li>
                             <li><a href="">Contact</a></li>
                         </ul>
-                    </div>
+                    </nav>
                 </div>
-                <div class="col-xs-12 col-md-2">
+                <div class="col-xs-12 col-sm-2">
                     <div class="search">
                         <form action="">
                             <input type="search" placeholder="SEARCH">
@@ -51,11 +51,15 @@
         <div class="slide">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <h1>WELCOME TO OUR MARKET</h1>
+                    </div>
+                    <div class="col-xs-12">   
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor 
                             non, ornare sagittis dolor. Nulla vestibulu lacus ...
                         </p>
+                    </div>
+                    <div class="col-xs-12">    
                         <div class="slide-buttons">
                             <button>VIEW MORE</button>
                             <button>VIDEO TOUR</button>
@@ -67,13 +71,13 @@
         <div class="description">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <div class="grey-block"></div>
                         <h1>WE ARE MODEST</h1>
                     </div> 
                 </div>
                 <div class="row">
-                    <div class="col-md-7 left-block">
+                    <div class="col-sm-7 left-block">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non
                             , ornare sagittis dolor. Nulla vestibulu lacus sed molestie gravida. Crferm entum  quismagna congue
                             , vel sodales arcu vestibulum. Nunc lobortis dui magna, quis lacusullamcorper at.
@@ -90,7 +94,7 @@
                             <a href="" class="b-e"></a>
                         </div>
                     </div>
-                    <div class="col-md-5 right-block">
+                    <div class="col-sm-5 right-block">
                         <div class="block-num">
                             <div class="green-block">01</div>
                             <div class="text">
