added team block and landscape block

--- a/index.html
+++ b/index.html
@@ -123,6 +123,149 @@
                 </div>
             </div>
         </div>
+        <div class="team">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="grey-block"></div>
+                        <h1>MEET THE TEAM.</h1>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-3 member">
+                        <div class="member-of-team">
+                            <div class="background-block"></div>
+                            <img src="images-blog/img (6).png" alt="">
+                            <div class="links2">
+                                <a href="" class="tw"></a>
+                                <a href="" class="fb"></a>
+                                <a href="" class="in"></a>
+                            </div> 
+                            <div class="info-member">
+                                <p class="name">Gloria Bromley</p>
+                                <p class="position">CEO and Founder</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-3 member">
+                        <div class="member-of-team">
+                            <div class="background-block"></div>
+                            <img src="images-blog/img (5).png" alt="">
+                            <div class="links2">
+                                <a href="" class="tw"></a>
+                                <a href="" class="fb"></a>
+                                <a href="" class="in"></a>
+                            </div>
+                            <div class="info-member">
+                                <p class="name">Paul Torres</p>
+                                <p class="position">Head of Development</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-3 member">
+                        <div class="member-of-team">
+                            <div class="background-block"></div>
+                            <img src="images-blog/img (4).png" alt="">
+                            <div class="links2">
+                                <a href="" class="tw"></a>
+                                <a href="" class="fb"></a>
+                                <a href="" class="in"></a>
+                            </div>
+                            <div class="info-member">
+                                <p class="name">Judith Gillette</p>
+                                <p class="position">Graphic Desinger</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-3 member">
+                        <div class="member-of-team">
+                            <div class="background-block"></div>
+                            <img src="images-blog/img (3).png" alt="">
+                            <div class="links2">
+                                <a href="" class="tw"></a>
+                                <a href="" class="fb"></a>
+                                <a href="" class="in"></a>
+                            </div>   
+                            <div class="info-member">
+                                <p class="name">Delores Reed</p>
+                                <p class="position">Client Service Director</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="landscape">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="grey-block2"></div>
+                        <h1>LOVELY WORK.</h1>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 img">
+                        <div class="img-work">
+                            <div class="background"></div>
+                            <img src="images-blog/img (12).png" alt="">
+                            <div class="cross-img"></div>
+                            <div class="hover-block">
+                                <h3>partnership guidlines</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 img">
+                        <div class="img-work">
+                            <div class="background"></div>
+                            <img src="images-blog/img (11).png" alt="">
+                            <div class="cross-img"></div>
+                            <div class="hover-block">
+                                <h3>partnership guidlines</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 img">
+                        <div class="img-work">
+                            <div class="background"></div>
+                            <img src="images-blog/img (10).png" alt="">
+                            <div class="cross-img"></div>
+                            <div class="hover-block">
+                            <h3>partnership guidlines</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 img">
+                        <div class="img-work">
+                            <div class="background"></div>
+                            <img src="images-blog/img (9).png" alt="">
+                            <div class="cross-img"></div>
+                            <div class="hover-block">
+                            <h3>partnership guidlines</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 img">
+                        <div class="img-work">
+                            <div class="background"></div>
+                            <img src="images-blog/img (8).png" alt="">
+                            <div class="cross-img"></div>
+                            <div class="hover-block">
+                            <h3>Lpartnership guidlines</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 img">
+                        <div class="img-work">
+                            <div class="background"></div>
+                            <img src="images-blog/img (7).png" alt="">
+                            <div class="cross-img"></div>
+                            <div class="hover-block">
+                            <h3>partnership guidlines</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 landscape-button"><button>SHOW ME MORE.</button></div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer></footer>
 </body> 
