--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        <div class="grey-block2"></div>
+                        <div class="grey-block"></div>
                         <h1>LOVELY WORK.</h1>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 img">
@@ -263,6 +263,83 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12 landscape-button"><button>SHOW ME MORE.</button></div>
+                </div>
+            </div>
+        </div>
+        <div class="list-work">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="grey-block"></div>
+                        <h1>what we do.</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 block-work">
+                        <img src="images-blog/icon (12).png" alt="">
+                        <h3>Easy theme Setup</h3>
+                        <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 block-work">
+                        <img src="images-blog/icon (14).png" alt="">
+                        <h3>pixel perfect design</h3>
+                        <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 block-work">
+                        <img src="images-blog/icon (11).png" alt="">
+                        <h3>responsive display</h3>
+                        <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 block-work">
+                        <img src="images-blog/icon (13).png" alt="">
+                        <h3>24/7 support</h3>
+                        <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 block-work">
+                        <img src="images-blog/icon (12).png" alt="">
+                        <h3>Easy theme Setup</h3>
+                        <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 block-work">
+                        <img src="images-blog/icon (14).png" alt="">
+                        <h3>pixel perfect design</h3>
+                        <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 block-work">
+                        <img src="images-blog/icon (11).png" alt="">
+                        <h3>responsive display</h3>
+                        <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 block-work">
+                        <img src="images-blog/icon (13).png" alt="">
+                        <h3>24/7 support</h3>
+                        <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="features">
+            <div class="container">
+                <div class="row">
+                    <div class="grey-block"></div>
+                    <h1>FEATURES.</h1>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 col-md-4 block-feature">
+                        <img src="images-blog/img (15).png" alt="">
+                        <h3>Product Design: Eames Chairs</h3>
+                        <p>Eames designs are certainly iconic. Everyone of us know at least two or three of their famous chairs. I would even risk saying that most of us dream about having a nice Eames.</p>
+                    </div>
+                    <div class="col-xs-12 col-md-4 block-feature">
+                        <img src="images-blog/img (14).png" alt="">
+                        <h3>Elegant and Colorful Logos</h3>
+                        <p>I’ve always found logo design to be one of the most challenging things to get right. There’s so much that a logo can say about a brand without actually saying it.</p>
+                    </div>
+                    <div class="col-xs-12 col-md-4 block-feature">
+                        <img src="images-blog/img (13).png" alt="">
+                        <h3>A Showcase of Creative</h3>
+                        <p>It’s always interesting to see another designer’s take on a famous website, app or even physical product. Different designers add their own personality and style.</p>
+                    </div>
                 </div>
             </div>
         </div>
