added block contacts and footer

--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
                         <form action="">
                             <input type="search" placeholder="SEARCH">
                         </form>
-                            <a href="">
-                                <div class="search-img"></div>
-                            </a>
+                            <a href="" class="search-img"></a>
                     </div>        
                 </div>
             </div>
@@ -343,7 +341,45 @@
                 </div>
             </div>
         </div>
+        <div class="contacts">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="grey-block"></div>
+                        <h1>stay in touch.</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="map"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-md-6 contact-inform">
+                        <h3>contact information</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique nec dolor non, ornare sagittis dolor. Nulla vestibulum lacus sed molestie gravida. </p>
+                        <p>Cras fermentum elit quis magna congue, <span>vel sodales</span> arcu vestibulum. Nunc lobortis dui magna, quis dapibus lacus</p>
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                        <button>Send message</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-6 col-sm-8 col-md-10">
+                    <h6>© Copyright 2014 by PSD Booster. All Rights Reserved.</h6>
+                </div>
+                <div class="col-xs-6 col-sm-4 col-md-2 footer-icons">
+                    <div class="footer-tw"></div>
+                    <div class="footer-fb"></div>
+                    <div class="footer-skype"></div>
+                    <div class="footer-be"></div>
+                    <div class="footer-in"></div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body> 
 </html>
