--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-7">
-                    <nav class="navigation">
+                    <nav class="navigation hidden-menu">
                         <ul class="menu">
                             <li><a href="">Home</a></li>
                             <li><a href="">About</a></li>
@@ -33,6 +33,11 @@
                             <li><a href="">Contact</a></li>
                         </ul>
                     </nav>
+                    <div class="nav-mobile-menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <div class="search">
