added mobile menu

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <header class="header">
         <div class="container">
             <div class="row header-row">
-                <div class="col-xs-12 col-sm-3">
+                <div class="col-sm-3">
                     <div class="logo">
                         <a href="">
                             <img src="images-blog/modest.png" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-7">
+                <div class="col-sm-7">
                     <nav class="navigation hidden-menu">
                         <ul class="menu">
                             <li><a href="">Home</a></li>
@@ -386,5 +386,6 @@
             </div>
         </div>
     </footer>
+    <script src="app.js"></script>
 </body> 
 </html>
