added scroll, AOS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="reset.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="grid.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -71,7 +72,7 @@
                 </div>
             </div>
         </div>
-        <div class="description">
+        <div class="description" data-aos="fade-up">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
@@ -80,7 +81,7 @@
                     </div> 
                 </div>
                 <div class="row">
-                    <div class="col-sm-7 left-block">
+                    <div class="col-xs-12 col-sm-7 left-block">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non
                             , ornare sagittis dolor. Nulla vestibulu lacus sed molestie gravida. Crferm entum  quismagna congue
                             , vel sodales arcu vestibulum. Nunc lobortis dui magna, quis lacusullamcorper at.
@@ -97,7 +98,7 @@
                             <a href="" class="b-e"></a>
                         </div>
                     </div>
-                    <div class="col-sm-5 right-block">
+                    <div class="col-xs-12 col-sm-5 right-block">
                         <div class="block-num">
                             <div class="green-block">01</div>
                             <div class="text">
@@ -126,14 +127,14 @@
                 </div>
             </div>
         </div>
-        <div class="team">
+        <div class="team" data-aos="fade-up">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="grey-block"></div>
                         <h1>MEET THE TEAM.</h1>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-3 member">
+                    <div class="col-xs-12 col-sm-6 col-md-3 member" data-aos="fade-up" data-aos-duration="500">
                         <div class="member-of-team">
                             <div class="background-block"></div>
                             <img src="images-blog/img (6).png" alt="">
@@ -148,7 +149,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-3 member">
+                    <div class="col-xs-12 col-sm-6 col-md-3 member" data-aos="fade-up" data-aos-duration="600">
                         <div class="member-of-team">
                             <div class="background-block"></div>
                             <img src="images-blog/img (5).png" alt="">
@@ -163,7 +164,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-3 member">
+                    <div class="col-xs-12 col-sm-6 col-md-3 member" data-aos="fade-up" data-aos-duration="700">
                         <div class="member-of-team">
                             <div class="background-block"></div>
                             <img src="images-blog/img (4).png" alt="">
@@ -178,7 +179,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-3 member">
+                    <div class="col-xs-12 col-sm-6 col-md-3 member" data-aos="fade-up" data-aos-duration="800">
                         <div class="member-of-team">
                             <div class="background-block"></div>
                             <img src="images-blog/img (3).png" alt="">
@@ -196,7 +197,7 @@
                 </div>
             </div>
         </div>
-        <div class="landscape">
+        <div class="landscape" data-aos="fade-up">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
@@ -269,7 +270,7 @@
                 </div>
             </div>
         </div>
-        <div class="list-work">
+        <div class="list-work" data-aos="fade-up">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
@@ -321,7 +322,7 @@
                 </div>
             </div>
         </div>
-        <div class="features">
+        <div class="features" data-aos="fade-up">
             <div class="container">
                 <div class="row">
                     <div class="grey-block"></div>
@@ -346,7 +347,7 @@
                 </div>
             </div>
         </div>
-        <div class="contacts">
+        <div class="contacts" data-aos="fade-up">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
@@ -421,6 +422,8 @@
             </form>
         </div>
     </div>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="app.js"></script>
 </body> 
 </html>
